--- a/c-server/Makefile
+++ b/c-server/Makefile
@@ -1,17 +1,31 @@
 AXIS_USABLE_LIBS = UCLIBC GLIBC
 include $(AXIS_TOP_DIR)/tools/build/rules/common.mak
 
+IDIR =../include
 
 PROG1	= server
 OBJS1	= server.c
 
 PROGS	= $(PROG1)
-
-PKGS = gio-2.0 glib-2.0 axhttp
+LDIR =../lib
+PKGS = gio-2.0 glib-2.0  axhttp
 CFLAGS += $(shell PKG_CONFIG_PATH=$(PKG_CONFIG_LIBDIR) pkg-config --cflags $(PKGS))
+LDFLAGS += -lcapture -pthread
 LDLIBS += $(shell PKG_CONFIG_PATH=$(PKG_CONFIG_LIBDIR) pkg-config --libs $(PKGS))
 
-CFLAGS-y   += -W 	    -Wformat=2 	    -Wpointer-arith 	    -Wbad-function-cast 	    -Wstrict-prototypes 	    -Wmissing-prototypes 	    -Winline 	    -Wdisabled-optimization 	    -Wfloat-equal 	    -Wall 	    -Werror
+CFLAGS	+= -O0 -g 
+
+CFLAGS-y   += -W \
+	    -Wformat=2 \
+	    -Wpointer-arith \
+	    -Wbad-function-cast \
+	    -Wstrict-prototypes \
+	    -Wmissing-prototypes \
+	    -Winline \
+	    -Wdisabled-optimization \
+	    -Wfloat-equal \
+	    -Wall \
+	    -Werror
 
 all:	$(PROGS)
 
@@ -30,4 +44,4 @@ ldflags:
 	$(info $(LDFLAGS))
 
 clean:
-	rm -f $(PROGS) *.o core *.eap
+	rm -f $(PROGS) *.o core
