--- a/java/FakeServerInC/Makefile
+++ b/java/FakeServerInC/Makefile
@@ -1,2 +1,2 @@
-openssl_example: openssl_example.c
-	$(CC) -o openssl_example openssl_example.c -lcrypto -lssl -I.
+openssl_example: server.c
+	$(CC) -o server server.c -lcrypto -lssl -I.
